tests/invalid/type/proto_field_init_type_mismatch.pts
prototype P {
    int x = "hello";
}

function main() : void {}
